2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi (runbibtex): Avoid having two opening brackets
	in a row to improve portability of code.  Reported by Richard
	Palo.  (http://savannah.gnu.org/bugs/?42067)

2014-04-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-intera.inc: New file for interactive tests.  Wait
	for file containing name of pseudoterminal to be created by
	subprocess.
	* info/t/Cleanup.inc: File created: shell code for test cleanup
	and exit.
	* info/t/index.sh, info/t/tab.sh: Source new files.
	* info/t/Init-test.inc: Record that test isn't interactive to allow
	Cleanup.inc to be used for both kinds of tests.
	* info/pseudotty.c: Call fclose on stdout instead of fflush to
	encourage output file to be created quickly.

2014-04-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/Makefile.am: Rules and variables for test suite.
	* info/pseudotty.c: New program, used by tests.
	* info/t/Init-test.inc: File created for test scripts.
	* info/t/file.sh, info/t/file-node.sh, info/t/dir.sh,
	info/t/dir-to-file.sh, info/t/dir-to-no-file.sh,
	info/t/dir-file-menu.sh, info/t/dir-file-no-menu.sh,
	info/t/dir-3-menus.sh, info/t/tab.sh, info/t/index.sh,
	info/t/help.sh: Test scripts created.
	* info/t/index.drib, info/t/tab.drib,
	info/t/Infokey-config, info/t/node-target, info/t/infodir/dir,
	info/t/infodir/file-menu.info, info/t/infodir/file1.info,
	info/t/infodir/intera.info, info/t/infodir/sample.info: Files created
	with data for tests.

2014-04-08  Karl Berry  <karl@gnu.org>

	* NEWS,
	* doc/texinfo.texi: mention --plaintext splitting.
	
	* doc/info-stnd.texi: tweak infopath-no-defaults and --init-file
	wording.
	* NEWS: mention these new features.

2014-04-08  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Converter.pm (_id_to_filename, 
	_sectioning_command_normalized_filename, _node_filename,
	_set_element_file, _top_node_filename, _get_element, 
	_set_pages_files, output),