@@ -1,5 +1,15 @@
 2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/t/file.sh, info/t/file-node.sh, info/t/dir.sh,
+	info/t/dir-to-file.sh, info/t/dir-to-no-file.sh,
+	info/t/dir-file-menu.sh, info/t/dir-file-no-menu.sh,
+	info/t/dir-3-menus.sh, info/t/tab.sh, info/t/index.sh,
+	info/t/help.sh: Copyright notices added.
+
+	* info/t/index.sh: Source t/Cleanup.inc.
+
+2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* util/texi2dvi (runbibtex): Avoid having two opening brackets
 	in a row to improve portability of code.  Reported by Richard
 	Palo.  (http://savannah.gnu.org/bugs/?42067)
